policies/tests/disallow-privilege-escalation/resource-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: privesc-insecure-pod
  namespace: tenant-alpha
spec:
  securityContext:
    runAsNonRoot: true
  initContainers:
    - name: init
      image: "harbor.sre.internal/alpha/my-init:v1.0.0"
      securityContext:
        allowPrivilegeEscalation: true
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
      securityContext:
        allowPrivilegeEscalation: true
