policies/tests/disallow-privilege-escalation/resource-pass.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: privesc-secure-pod
  namespace: tenant-alpha
spec:
  securityContext:
    runAsNonRoot: true
  initContainers:
    - name: init
      image: "harbor.sre.internal/alpha/my-init:v1.0.0"
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - "ALL"
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
      securityContext:
        runAsNonRoot: true
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        capabilities:
          drop:
            - "ALL"
