policies/tests/disallow-privilege-escalation/kyverno-test.yaml
---
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privilege-escalation-test
policies:
  - policy.yaml
resources:
  - resource-pass.yaml
  - resource-fail.yaml
results:
  - policy: disallow-privilege-escalation
    rule: disallow-privilege-escalation-containers
    resource: privesc-secure-pod
    kind: Pod
    result: pass
  - policy: disallow-privilege-escalation
    rule: disallow-privilege-escalation-containers
    resource: privesc-insecure-pod
    kind: Pod
    result: fail
  - policy: disallow-privilege-escalation
    rule: disallow-privilege-escalation-init-containers
    resource: privesc-secure-pod
    kind: Pod
    result: pass
  - policy: disallow-privilege-escalation
    rule: disallow-privilege-escalation-init-containers
    resource: privesc-insecure-pod
    kind: Pod
    result: fail
